issue#104 title/payment block aligned

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -6112,6 +6112,7 @@ padding-bottom: 4px;
 	border: 1px solid #E0E0E0;
 	background: #F0F0F0;
 	text-align: left;
+	margin-top:40px;
 	
 & > hr{
 	margin:5px 0;
